# audd-payment

./: Anchor.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
app/: package.json  pnpm-lock.yaml
app/idl/: solaudd.json
app/src/app/: layout.tsx  page.tsx
app/src/app/merchant/: page.tsx
app/src/app/pay/new/: page.tsx
app/src/app/stream/: page.tsx
app/src/app/treasury/: page.tsx
app/src/components/: Navbar.tsx
app/src/components/merchant/: VaultDashboard.tsx
app/src/components/pay/: PaymentLinkCreator.tsx
app/src/components/stream/: StreamCreator.tsx  StreamMonitor.tsx
app/src/components/treasury/: TreasuryPanel.tsx
app/src/components/wallet/: WalletProvider.tsx
app/src/hooks/: useEscrow.ts  useMerchant.ts  useStream.ts  useTreasury.ts
app/src/lib/: anchor.ts  constants.ts
migrations/: deploy.ts
programs/solaudd/: Cargo.toml
programs/solaudd/src/: errors.rs  lib.rs
programs/solaudd/src/instructions/: escrow.rs  mod.rs  stream.rs  treasury.rs  vault.rs
programs/solaudd/src/state/: escrow_state.rs  mod.rs  stream_state.rs  treasury_state.rs  vault_state.rs
tests/: escrow.test.ts  stream.test.ts  treasury.test.ts  vault.test.ts
