[package]
name = "solaudd"
version = "0.1.0"
description = "AUDD payment infrastructure on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solaudd"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.31.1", features = ["token", "associated_token"] }

[dev-dependencies]
anchor-client = "0.31.1"